--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,14 @@
-<main>
-  <p class="flex items-center justify-center w-full h-screen">SALUT</p>
+<main class="w-full h-screen flex justify-center items-center bg-blue-300">
+  <div class="flex flex-col p-10 bg-white rounded-xl">
+    <img
+      src="../assets/images/images/image-qr-code.png"
+      alt="QR CODE"
+      class="rounded-xl"
+    />
+    <h1>Improve your frontend skills by building your coding project</h1>
+    <p>
+      Scan the QR code to visit Frontend Mentor and take your coding skills to
+      the next level
+    </p>
+  </div>
 </main>
