--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,22 @@
-<main class="w-full h-screen flex justify-center items-center bg-blue-300">
-  <div class="flex flex-col p-10 bg-white rounded-xl">
+<main
+  class="font-Outfit w-full h-screen flex justify-center items-center bg-[#d6e2f0]"
+>
+  <div
+    class="shadow-md gap-5 flex flex-col justify-center items-center p-5 bg-white rounded-3xl w-[330px]"
+  >
     <img
       src="../assets/images/images/image-qr-code.png"
       alt="QR CODE"
-      class="rounded-xl"
+      class="rounded-2xl"
     />
-    <h1>Improve your frontend skills by building your coding project</h1>
-    <p>
-      Scan the QR code to visit Frontend Mentor and take your coding skills to
-      the next level
-    </p>
+    <div class="grid gap-3 grid-cols-1 p-1">
+      <h1 class="text-xl text-center text-[#1f3251] font-bold">
+        Improve your frontend skills by building your coding project
+      </h1>
+      <p class="text-center text-[#7b879d]">
+        Scan the QR code to visit Frontend Mentor and take your coding skills to
+        the next level
+      </p>
+    </div>
   </div>
 </main>
